<resources>
    <string name="app_name">ServicesExample</string>
    <string name="action_settings">Settings</string>
    <string name="startService">Start Service</string>
    <string name="StopService">Stop Service</string>
    <string name="second">Second</string>
    <string name="startSecond">Start Service</string>
    <string name="third">Third</string>
    <string name="bindService">Bind Service</string>
    <string name="unbindService">Unbind Service</string>
    <string name="first">Enter First Number</string>
    <string name="secondET">Enter Second Number</string>
    <string name="add">Add</string>
</resources>
